--- a/Assignments/Css-Workshop/style.css
+++ b/Assignments/Css-Workshop/style.css
@@ -1,3 +1,28 @@
-li{
-    font-style: bold;
+.parent-circle{
+    background-color: antiquewhite;
+    width:500px;
+    height: 500px;
+    left:50%;
+    border: 2px solid black;
+    border-radius: 50%;
+    
 }
+
+.child-box{
+    position:relative;
+    background-color: black;
+    width:50px;
+    height: 50px;
+    left:225px;
+    top:225px;
+    animation: rotation 4s forwards linear;
+}
+
+@keyframes rotation{
+    from {
+        transform: rotate(-225deg) translate(250px) rotate(360deg);
+    }
+    to {
+        transform: rotate(225deg) translate(250px) rotate(360deg);
+    }
+} 
