--- a/Projects/7.recipie-page/src/input.css
+++ b/Projects/7.recipie-page/src/input.css
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card{
+    @apply bg-white rounded overflow-hidden shadow-md relative;
+}
+
+.badge{
+    @apply bg-orange-100 text-gray-500 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
+}
